--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "emotion-theming": "^10.0.27",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
@@ -26,7 +28,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "node core/exec.js",
+    "start": "react-scripts start",
+    "start:dev": "node core/exec.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
